Made an attempt of a solution to fix caret alignment on some Select

--- a/src/modules/core/components/Fields/Select/Select.css
+++ b/src/modules/core/components/Fields/Select/Select.css
@@ -46,12 +46,14 @@
 }
 
 .selectIcon {
+  align-self: center;
   margin-left: 8px;
   width: 7px;
 }
 
 .activeOption {
   display: flex;
+  align-self: center;
   height: 100%;
   overflow: hidden;
   font-weight: var(--weight-bold);
